--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: GCP RDP VM
+name: Create-GCP-VM
 
 on:
   workflow_dispatch:
@@ -6,53 +6,41 @@ on:
 jobs:
   create-vm:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
-      - name: Enable required APIs
+      - name: Create Windows VM with GPU
         run: |
-          gcloud services enable compute.googleapis.com
-
-      - name: Create VM with Tesla T4
-        run: |
-          VM_NAME="rdp-vm-${GITHUB_RUN_ID}"
-          REGION="southamerica-east1"
-          ZONE="southamerica-east1-b"
-          
-          # Criar a VM Windows Server com GPU Tesla T4
-          gcloud compute instances create $VM_NAME \
-            --zone=$ZONE \
-            --machine-type=n1-standard-4 \
-            --accelerator="type=nvidia-tesla-t4,count=1" \
+          gcloud compute instances create win-vm-gpu \
+            --zone=southamerica-east1-b \
+            --machine-type=n1-standard-8 \
+            --accelerator=type=nvidia-tesla-t4,count=1 \
             --image-project=windows-cloud \
-            --image-family=windows-2022 \
+            --image-family=windows-2019 \
             --boot-disk-size=100GB \
             --maintenance-policy=TERMINATE \
             --restart-on-failure \
-            --scopes=https://www.googleapis.com/auth/cloud-platform
+            --tags=rdp \
+            --scopes=cloud-platform
 
-          # Abrir firewall do RDP
-          gcloud compute firewall-rules create allow-rdp --allow tcp:3389 --target-tags=rdp --quiet || true
-          gcloud compute instances add-tags $VM_NAME --zone=$ZONE --tags=rdp
-
-      - name: Get VM External IP
-        id: get-ip
+      - name: Open Firewall for RDP
         run: |
-          VM_NAME="rdp-vm-${GITHUB_RUN_ID}"
-          ZONE="southamerica-east1-b"
-          IP=$(gcloud compute instances describe $VM_NAME --zone=$ZONE --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
-          echo "VM_IP=$IP" >> $GITHUB_ENV
+          gcloud compute firewall-rules create allow-rdp \
+            --allow tcp:3389 \
+            --target-tags=rdp \
+            --source-ranges=0.0.0.0/0 || true
 
       - name: Show Access Info
         run: |
-          echo "===================================="
-          echo "✅ VM criada com sucesso no GCP!"
-          echo "IP da VM: ${{ env.VM_IP }}"
-          echo "Usuário: configure depois no painel GCP (reset Windows password)"
-          echo "GPU: Tesla T4"
-          echo "Região: São Paulo (southamerica-east1)"
-          echo "===================================="
+          echo "✅ VM criada com sucesso!"
+          echo "Para pegar o IP da VM rode:"
+          echo "gcloud compute instances list --filter=name:win-vm-gpu"
