--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Windows RDP
+name: RDP Windows
 
 on:
   workflow_dispatch:
@@ -6,44 +6,36 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-    - name: Enable RDP + Disable NLA
-      run: |
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0
+      - name: Baixar & Configurar Ngrok
+        run: |
+          Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip" -OutFile "ngrok.zip"
+          mkdir "$env:USERPROFILE\ngrok"
+          tar -xf "ngrok.zip" -C "$env:USERPROFILE\ngrok"
+          cd "$env:USERPROFILE\ngrok"
+          .\ngrok.exe config add-authtoken $env:NGROK_AUTH_TOKEN
+        env:
+          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
 
-    - name: Create Autologin User
-      run: |
-        $username = "RDP"
-        $password = "Rdp@12345"
-        net user /add $username $password
-        net localgroup administrators $username /add
-        reg add "HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" /v AutoAdminLogon /t REG_SZ /d 1 /f
-        reg add "HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" /v DefaultUsername /t REG_SZ /d $username /f
-        reg add "HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon" /v DefaultPassword /t REG_SZ /d $password /f
+      - name: Iniciar túnel TCP RDP
+        run: |
+          Start-Process -NoNewWindow "$env:USERPROFILE\ngrok\ngrok.exe" "tcp 3389"
+          Start-Sleep -Seconds 10
 
-    - name: Download & Setup Ngrok
-      run: |
-        Invoke-WebRequest -Uri "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip" -OutFile "ngrok.zip"
-        Expand-Archive -Path "ngrok.zip" -DestinationPath "$env:USERPROFILE\ngrok" -Force
-        cd "$env:USERPROFILE\ngrok"
-        .\ngrok.exe config add-authtoken $env:NGROK_AUTH_TOKEN
+      - name: Mostrar informações de conexão
+        run: |
+          $tunnel = Invoke-RestMethod -Uri "http://127.0.0.1:4040/api/tunnels"
+          $addr = $tunnel.tunnels.public_url -replace "tcp://",""
+          Write-Host "========================================"
+          Write-Host "   🔗 Copie e cole no Remote Desktop:"
+          Write-Host "   $addr"
+          Write-Host "   Usuário: runneradmin"
+          Write-Host "   Senha: $env:PASSWORD"
+          Write-Host "========================================"
+        env:
+          PASSWORD: ${{ secrets.RDP_PASSWORD }}
 
-    - name: Start Ngrok Tunnel (TCP 3389)
-      run: |
-        cd "$env:USERPROFILE\ngrok"
-        Start-Process .\ngrok.exe "tcp 3389"
-        Start-Sleep -Seconds 10
-        $tunnel = Invoke-RestMethod -Uri http://127.0.0.1:4040/api/tunnels
-        $publicUrl = ($tunnel.tunnels | Where-Object {$_.proto -eq "tcp"}).public_url
-        Write-Output "Ngrok TCP Address: $publicUrl" | Tee-Object -FilePath ngrok_address.txt
-
-    - name: Show Access Info
-      run: |
-        Write-Output "===================="
-        Write-Output "✅ RDP Ready!"
-        Write-Output "Username: RDP"
-        Write-Output "Password: Rdp@12345"
-        Write-Output "Connect via: $(Get-Content ngrok_address.txt)"
-        Write-Output "===================="
+      - name: Manter sessão ativa
+        run: |
+          while ($true) { Start-Sleep -Seconds 300 }
